@@ -62,6 +62,7 @@ DWARFOPTS=
 #OPEN64ORC#CEXTRA = -DTAU_OPEN64 -DTAU_DOT_H_LESS_HEADERS #ENDIF#
 #MPC#CC = $(CONFIG_CXX) #ENDIF#
 #CRAYX1CC#CEXTRA = -DTAU_DOT_H_LESS_HEADERS #ENDIF#
+#NEC_COMPILERS#CEXTRA = -DTAU_NEC_SX -DTAU_DOT_H_LESS_HEADERS #ENDIF#
 #MINGW#CEXTRA	       = -DTAU_WINDOWS -DTAU_DISABLE_SIGUSR -DTAU_MINGW -DTAU_ENABLE  -DTAU_GNU #ENDIF#
 #HPGNU#CEXTRA = -DTAU_HP_GNU #ENDIF#
 #HP_CFLAGS#LSX = .sl#ENDIF#
